Fix FFN dim convention (+ real-model bench row)